# strigidaemon

./: .krazy  CMakeLists.txt  LibSearchClient.cmake.in  config.h.cmake
cmake/: FindDBus.cmake
include/strigi/: clientinterface.h
lib/: CMakeLists.txt  asyncsocketclient.cpp  socketclient.cpp
tests/: CMakeLists.txt
tests/daemon/: CMakeLists.txt  daemonconfiguratortest.cpp
tests/daemon/dbus/: CMakeLists.txt  strigidaemonunittestsession.cpp  strigidaemonunittestsession.h  test.cpp  xesamlistener.cpp
tests/indextesters/: CMakeLists.txt  clucenetests.cpp  indexmanagertester.cpp  indexmanagertester.h  indexsearchtester.cpp  indextest.cpp
tests/streamanalyzer/: CMakeLists.txt  diranalyzertester.cpp  diranalyzertester.h
tests/streamanalyzer/xesam/: CMakeLists.txt  xesam2strigitest.cpp
tests/utils/: CMakeLists.txt  unittestfunctions.h
